Remove unnecessary guava usage